@@ -52,6 +52,10 @@ SPECIALREPORTED=FALSE
 # Example: EDITALONE= FALSE
 EDITALONE=FALSE
 
+# Whether this faction is inherited by children
+# Example: INHERITED= TRUE
+INHERITED=TRUE
+
 # DEFAULT is a semi-colon delimited set of Zappers and values
 # These values are applied whenever a faction is added manually,
 # or as the result of an event.  This tag should always have at
