@@ -42,6 +42,7 @@
  41. MOTD command can now be used to set motd.txt file, which is also now deleted every day.
  41. New random quest template category: auto, for making quests w/o quest givers.
  42. New mood: reflective
+ 43. Factions can now be set as being inheritable by children
  
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
